@@ -955,3 +955,5 @@ s/bu_find_hash_entry/bu_hash_tbl_find/g
 s/bu_hash_add_entry/bu_hash_tbl_add/g
 s/bu_hash_tbl_pr/bu_hash_tbl_print/g
 	renamed for better consistency in hash table API and with other libbu API [7.24]
+s/dm_applicationfocus([[:space:]]);//g
+	only useful in older os x versions, users can now do the same thing via XQuartz preferences
